# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
test/: test_template.py
